music-data: implement track binding